@@ -396,8 +396,9 @@ class Project(gobject.GObject):
 
     def reload_all_data(self):
         """Reload all data in the TreeView."""
-        
+
         model = self.tree_view.get_model()
+        self.tree_view.set_model(None)
         model.clear()
 
         timings = self.get_timings()
@@ -405,6 +406,8 @@ class Project(gobject.GObject):
 
         for i in range(len(self.data.times)):
             model.append([i + 1] + timings[i] + texts[i])
+            
+        self.tree_view.set_model(model)
 
     def reload_data_between_rows(self, row_x, row_y):
         """Reload TreeView data between row_x and row_y."""
@@ -413,11 +416,15 @@ class Project(gobject.GObject):
         end_row   = max(row_x, row_y)
 
         model   = self.tree_view.get_model()
+        self.tree_view.set_model(None)
+        
         timings = self.get_timings()
         texts   = self.data.texts
 
         for i in range(start_row, end_row + 1):
             model[i] = [i + 1] + timings[i] + texts[i]
+
+        self.tree_view.set_model(model)
 
     def reload_data_in_columns(self, cols):
         """
@@ -429,6 +436,7 @@ class Project(gobject.GObject):
             cols = [cols]
 
         model = self.tree_view.get_model()
+        self.tree_view.set_model(None)
 
         for col in cols:
 
@@ -452,6 +460,8 @@ class Project(gobject.GObject):
             
                 for i in range(len(model)):
                     model[i][col] = self.data.texts[i][data_col]
+
+        self.tree_view.set_model(model)
 
     def reload_data_in_row(self, row):
         """Reload TreeView data in given row."""
